[#5] Sonarcloud 코드 수정
## 수정 사항
- logger 사용
- 불필요한 코드 삭제 및 수정